Fixed section title alignment

--- a/components/AppDevelopmentCommon/ReviewsSection/styles.module.scss
+++ b/components/AppDevelopmentCommon/ReviewsSection/styles.module.scss
@@ -12,10 +12,6 @@
 .chat-app-development-company {
   @include appDevelopmentContainer;
 
-  .title {
-    max-width: $max-content-width;
-  }
-
   .callToAction {
     @include defaultCallToAction;
   }
